added portfolio section

--- a/index.html
+++ b/index.html
@@ -98,14 +98,6 @@
      <div class="w3-third">
        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
         <li><img src="assets/services_icons/dev_icon.png" alt="design">DEVELOPMENT</li>
-         <li class="w3-padding-16">Web Design</li>
-         <li class="w3-padding-16">Photography</li>
-         <li class="w3-padding-16">50GB Storage</li>
-         <li class="w3-padding-16">Endless Support</li>
-         <li class="w3-padding-16">
-           <h2>$ 25</h2>
-           <span class="w3-opacity">per month</span>
-         </li>
          <li class="w3-light-grey w3-padding-24">
            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
          </li>
@@ -115,13 +107,45 @@
      <div class="w3-third">
         <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
          <li><img src="assets/services_icons/product_icon.png" alt="design">PRODUCT</li>
-          <li class="w3-padding-16">Web Design</li>
-          <li class="w3-padding-16">Photography</li>
-          <li class="w3-padding-16">50GB Storage</li>
-          <li class="w3-padding-16">Endless Support</li>
-          <li class="w3-padding-16">
-            <h2>$ 25</h2>
-            <span class="w3-opacity">per month</span>
+          
+          </li>
+          <li class="w3-light-grey w3-padding-24">
+            <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+          </li>
+        </ul>
+      </div>
+   </div>
+</section>
+<!-- project section -->
+
+<p id="Project"></p>
+<section class="project-section active">
+  <p class="project-heading">What we Do</p>
+
+   <!-- Grid for What we do -->
+   <div class="w3-row-padding" style="margin:0 -16px">
+     <div class="w3-third w3-margin-bottom">
+       <ul class="w3-ul w3-white w3-center w3-c">
+         <li><img src="assets/services_icons/design_icon.png" alt="design"> DESIGN</li>
+         <li class="w3-light-grey w3-padding-24">
+           <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+         </li>
+       </ul>
+     </div>
+
+     <div class="w3-third">
+       <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+        <li><img src="assets/services_icons/dev_icon.png" alt="design">DEVELOPMENT</li>
+         <li class="w3-light-grey w3-padding-24">
+           <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
+         </li>
+       </ul>
+     </div>
+
+     <div class="w3-third">
+        <ul class="w3-ul w3-white w3-center w3-opacity w3-hover-opacity-off">
+         <li><img src="assets/services_icons/product_icon.png" alt="design">PRODUCT</li>
+          
           </li>
           <li class="w3-light-grey w3-padding-24">
             <button class="w3-button w3-white w3-padding-large w3-hover-black">Sign Up</button>
