added custom styles

--- a/index.html
+++ b/index.html
@@ -117,15 +117,12 @@
       
    </div>
 </section>
-<!-- project section -->
+<!-- porfolio section -->
+<section class="portfolio-section active">
+  <p class="portfolio-heading">Portfolio</p>
 
-<p id="Project"></p>
-<section class="project-section active">
-  <p class="project-heading">What we Do</p>
-
-   <!-- Grid for What we do -->
+   <!-- Grid for Portfolio -->
    <div class="w3-row-padding" style="margin:0 -16px">
-     <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-padding-large">
                 <img src="assets/portfolio/work1.jpg" class="w3-hover-opacity w3-padding-24 w3-margin-bottom ">
                 <img src="assets/portfolio/work2.jpg" class="w3-hover-opacity w3-padding-24 w3-margin-bottom ">
@@ -136,7 +133,6 @@
                 <img src="assets/portfolio/work7.jpg" class="w3-hover-opacity w3-padding-24 w3-margin-bottom ">
                 <img src="assets/portfolio/work8.jpg" class="w3-hover-opacity w3-padding-24 w3-margin-bottom ">
         </ul>
-    </div>
    </div>
 </section>
 
